Override multiple selectors to attempt to fix image overflow on mobile

--- a/themes/twentytwentyfour-child/style.css
+++ b/themes/twentytwentyfour-child/style.css
@@ -384,10 +384,11 @@ body:not(.home) main#wp--skip-link--target {
 @media only screen and (max-width: 768px) {
     .widest {
         position: initial;
+        right: 0;
         width: 100%;
     }
 
-    .widest li {
+    .widest li, .widest figure, .widest img {
         width: 100%;
     }
 }
